[gd_scene load_steps=2 format=3 uid="uid://bmbhdgx5c06vu"]

[ext_resource type="Script" uid="uid://cb4dheuccgbv" path="res://Networking/network_test.gd" id="1_lb6m4"]

[node name="ConnectionTest" type="Node3D" node_paths=PackedStringArray("joinID")]
script = ExtResource("1_lb6m4")
joinID = NodePath("Join/TextEdit")

[node name="Info" type="Panel" parent="."]
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -373.0
grow_horizontal = 0
grow_vertical = 2

[node name="InfoText" type="RichTextLabel" parent="Info"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Use Steam" type="Button" parent="."]
offset_right = 437.0
offset_bottom = 84.0
text = "Use Steam"

[node name="Host" type="Button" parent="."]
offset_top = 94.0
offset_right = 437.0
offset_bottom = 178.0
disabled = true
text = "Host"

[node name="Join" type="Button" parent="."]
offset_top = 206.0
offset_right = 437.0
offset_bottom = 290.0
disabled = true
text = "Join"

[node name="TextEdit" type="TextEdit" parent="Join"]
custom_minimum_size = Vector2(0, 43.27)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 7.0
offset_bottom = 50.270004
grow_horizontal = 2
grow_vertical = 0
placeholder_text = "Lobby ID"

[connection signal="pressed" from="Use Steam" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Join" to="." method="_on_join_pressed"]
